fix comic alignment

--- a/src/widgets/xkcd/xkcd.css
+++ b/src/widgets/xkcd/xkcd.css
@@ -24,8 +24,9 @@ xkcd-card .comic {
 
 xkcd-card .comic-frame {
     position: relative;
-    display: grid;
-    place-items: center;
+    DISPLAY: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.02);
